fix hover flickering on likes

--- a/src/main/resources/public/assets/css/content.css
+++ b/src/main/resources/public/assets/css/content.css
@@ -154,15 +154,33 @@ code {
 	-webkit-box-shadow: 0 0 0 4px #fff;
     -moz-box-shadow: 0 0 0 4px #fff;
 }
+
+.likes-box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.likes {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+.likes-count {
+	margin-right: 15px;
+	display: inline-block;
+}
+
 .overlapping {
-	transition: margin 0.3s;
+	display: inline-block;
+	transition: margin 0.3s, padding 0.3s;
+	margin-right: -5px;
 }
-.overlapping:not(:first-child) {
-	margin-left: -10px;
-}
+
 .overlapping:hover {
-	margin-left: 0;
-	margin-right: 10px;
+	margin-right: 0px;
+	padding-right: 5px;
+	padding-left: 10px;
 }
 
 i {
